corrected overflow problem with menu page styling.

--- a/Bobs/app/assets/stylesheets/application.scss
+++ b/Bobs/app/assets/stylesheets/application.scss
@@ -546,7 +546,7 @@ position: absolute;
 #menuView {
     margin: 250px auto 0px;
     background-color: #FFFADD;
-    height: 1500px;
+    height: 100%;
     font-family: 'Space Mono', monospace;
 }
 
